Completed header and banner design; needs a bit more styling but good start

--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Services and Benefits</title>
+    <link rel="stylesheet" href="./Assets/style.css">
+    <title>Professional Portfolio Webpage</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <nav class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1><span class="jk">J</span>ason <span class="jk">K</span>im</h1>
 
         <menu>
             <ul>
                 <li>
-                    <a href="#content-card1">Search Engine Optimization</a>
+                    <a href="#content-card1">About Me</a>
                 </li>
                 <li>
-                    <a href="#content-card2">Online Reputation Management</a>
+                    <a href="#content-card2">Work</a>
                 </li>
                 <li>
-                    <a href="#content-card3">Social Media Marketing</a>
+                    <a href="#content-card3">Contact Me</a>
+                </li>
+                <li>
+                    <a href="#content-card3">Resume</a>
                 </li>
             </ul>
         </menu>
@@ -29,7 +34,8 @@
     </nav>
 
     <header>
-        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Picture of a digital marketing meeting." class="hero">
+        <img src="./Assets/Images/hexagonal_grey_sm.jpg" alt="Cool blue banner." class="hero">
+        <div class = "bottom-right">Cool Subtitle Here</div>
     </header>
 
     <section class="content">
