--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./Assets/reset.css">
     <link rel="stylesheet" href="./Assets/style.css">
     <title>Professional Portfolio Webpage</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,16 +18,16 @@
         <menu>
             <ul>
                 <li>
-                    <a href="#content-card1">About Me</a>
+                    <a href="#about_me">About Me</a>
                 </li>
                 <li>
-                    <a href="#content-card2">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#content-card3">Contact Me</a>
+                    <a href="#contact_me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#content-card3">Resume</a>
+                    <a href="#resume">Resume</a>
                 </li>
             </ul>
         </menu>
@@ -34,71 +35,50 @@
     </nav>
 
     <header>
-        <img src="./Assets/Images/hexagonal_grey_sm.jpg" alt="Cool blue banner." class="hero">
-        <div class = "bottom-right">Cool Subtitle Here</div>
+        <img src="./Assets/Images/hexagonal_grey_sm.jpg" alt="Cool grey banner." class="hero">
     </header>
 
     <section class="content">
 
-        <summary id="content-card1" class="content-card1">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Picture emphasizing SEO" class="float-left" />
-            <h2>Search Engine Optimization</h2>
+        <summary id="about_me" class="about_me">
+            <img src="./assets/Images/img_folder.png" alt="Picture of a folder" class="float-left" />
+            <h2><span class="diff_color">A</span>bout <span class="diff_color">M</span>e</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur ex consequatur accusantium fugiat perferendis quibusdam hic veritatis illum tenetur expedita est quas amet, vitae delectus excepturi veniam, dicta esse. Tempora quaerat expedita odio, incidunt vero iure ex, pariatur deserunt soluta dolorum omnis, similique nesciunt. At cumque illo alias ab eligendi.
             </p>
         </summary>
 
-        <summary id="content-card2" class="content-card2">
-            <img src="./assets/images/online-reputation-management.jpg" alt="Picture emphasizing reputation" class="float-right" />
-            <h2>Online Reputation Management</h2>
+        <summary id="work" class="work">
+            <img src="./assets/images/img_folder.png" alt="Picture of a folder" class="float-left" />
+            <h2><span class="diff_color">W</span class="diff_color">ork</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, voluptatem et minima exercitationem dicta praesentium corrupti officia repellat pariatur rem cumque explicabo, cum suscipit ea placeat aliquid voluptatum cupiditate itaque? Odio, ex, laborum asperiores ut cupiditate temporibus sunt iste eaque distinctio illo eligendi sequi ipsam consectetur suscipit! Fugiat, eos sed.
             </p>
         </summary>
 
-        <summary id="content-card3" class="content-card3">
-            <img src="./assets/images/social-media-marketing.jpg" alt="Picture emphasizing social media marketing" class="float-left" />
-            <h2>Social Media Marketing</h2>
+        <summary id="contact_me" class="contact_me">
+            <img src="./assets/images/img_folder.png" alt="Picture of a folder" class="float-left" />
+            <h2><span class="diff_color">C</span>ontact <span class="diff_color">M</span>e</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptatem vel cum asperiores error et ipsam illo atque sapiente ex at iure nam quo alias incidunt nemo praesentium est enim aliquid accusamus ut, cupiditate nisi esse eaque. Officiis, consequuntur. Debitis eius in soluta est laborum! Cupiditate repellendus dolorum reprehenderit odit!
+            </p>
+        </summary>
+
+        <summary id="resume" class="resume">
+            <img src="./assets/images/img_folder.png" alt="Picture of a folder" class="float-left" />
+            <h2><span class="diff_color">R</span>esume</h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis sit aspernatur molestias. Iure provident modi nisi nulla accusantium expedita aliquam? Provident cum esse adipisci veritatis atque. Ullam eos, soluta, animi dolorem voluptas, aliquid rem quaerat consectetur debitis tempora quibusdam ipsa tenetur quia neque corporis accusantium. Delectus ut alias optio sint!
             </p>
         </summary>
 
     </section>
 
-    <aside class="benefits">
-
-        <summary class="benefits-card">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Graphic showing leads being brought to client">
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </Summary>
-
-        <Summary class="benefits-card">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Graphic that shows client idea or brand being broadcasted">
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </Summary>
-
-        <Summary class="benefits-card">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Graphic denoting cost savings">
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </Summary>
-
-    </aside>
-
     <footer class="footer">
 
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h2>made with ❤️️ by eccentricality</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+            &copy; 2019 eccentric vision, inc.
         </p>
 
     </footer>
