Made a lot of progress on style and layout

--- a/index.html
+++ b/index.html
@@ -46,14 +46,80 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur ex consequatur accusantium fugiat perferendis quibusdam hic veritatis illum tenetur expedita est quas amet, vitae delectus excepturi veniam, dicta esse. Tempora quaerat expedita odio, incidunt vero iure ex, pariatur deserunt soluta dolorum omnis, similique nesciunt. At cumque illo alias ab eligendi.
             </p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur repudiandae ullam culpa nisi nulla earum aperiam quasi, ipsam qui optio laboriosam a. Quo dolores illum laudantium necessitatibus magnam explicabo laboriosam?</p>
         </summary>
 
         <summary id="work" class="work">
             <img src="./Assets/Images/img_folder.png" alt="Picture of a folder" class="float-left" />
             <h2><span class="diff_color">W</span class="diff_color">ork</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, voluptatem et minima exercitationem dicta praesentium corrupti officia repellat pariatur rem cumque explicabo, cum suscipit ea placeat aliquid voluptatum cupiditate itaque? Odio, ex, laborum asperiores ut cupiditate temporibus sunt iste eaque distinctio illo eligendi sequi ipsam consectetur suscipit! Fugiat, eos sed.
-            </p>
+                <section class="row justify-center">
+
+                    <div class="card-column">
+                      <figure class="card code-card">
+                        <div class="card-body">
+                          <p>Project 1</p>
+                        </div>
+                        <article class="code-block">
+                            <img src="./Assets/Images/stock1.jpg"/> 
+                        </article>
+                      </figure>
+                    </div>
+
+                    <div class="card-column">
+                      <figure class="card code-card">
+                        <div class="card-body">
+                          <p>Project 2</p>
+                        </div>
+                        <article class="code-block">
+                            <img src="./Assets/Images/stock2.jpg"/> 
+                        </article>
+                      </figure>
+                    </div>
+              
+                    <div class="card-column">
+                      <figure class="card code-card">
+                        <div class="card-body">
+                          <p>Project 3</p>
+                        </div>
+                        <article class="code-block">
+                            <img src="./Assets/Images/stock3.jpg"/> 
+                        </article>
+                      </figure>
+                    </div>
+
+                    <div class="card-column">
+                      <figure class="card code-card">
+                        <div class="card-body">
+                          <p>Project 4</p>
+                        </div>
+                        <article class="code-block">
+                            <img src="./Assets/Images/stock4.jpg"/> 
+                        </article>
+                      </figure>
+                    </div>
+
+                    <div class="card-column">
+                      <figure class="card code-card">
+                        <div class="card-body">
+                          <p>Project 5</p>
+                        </div>
+                        <article class="code-block">
+                            <img src="./Assets/Images/stock5.jpg"/> 
+                        </article>
+                      </figure>
+                    </div>
+              
+                    <div class="card-column">
+                      <figure class="card code-card">
+                        <div class="card-body">
+                          <p>Project 6</p>
+                        </div>
+                        <article class="code-block">
+                            <img src="./Assets/Images/stock6.jpg"/> 
+                        </article>
+                      </figure>
+                    </div>
+                  </section>
         </summary>
 
         <summary id="contact_me" class="contact_me">
